--- a/app/src/main/res/layout/activity_app_list.xml
+++ b/app/src/main/res/layout/activity_app_list.xml
@@ -50,6 +50,8 @@
         android:layout_marginBottom="16dp"
         android:choiceMode="multipleChoiceModal"
         android:clickable="true"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:layoutDirection="locale"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
