--- a/TxTLauncher_alt/app/src/main/res/layout/fragment_home.xml
+++ b/TxTLauncher_alt/app/src/main/res/layout/fragment_home.xml
@@ -38,13 +38,12 @@
         app:layout_constraintTop_toBottomOf="@id/digitalClock" />
 
 
-
     <ImageView
         android:id="@+id/helpButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="22dp"
+        android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/button_help"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,18 +52,6 @@
 
     <ImageView
         android:id="@+id/settingsButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="64dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/button_settings"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/settings" />
-
-    <ImageView
-        android:id="@+id/searchButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="110dp"
@@ -73,7 +60,7 @@
         android:contentDescription="@string/button_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/search" />
+        app:srcCompat="@drawable/settings" />
 
     <LinearLayout
         android:id="@+id/AppFrame"
@@ -145,14 +132,14 @@
             app:srcCompat="@drawable/email" />
 
         <ImageView
-            android:id="@+id/applistButton"
+            android:id="@+id/searchButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="15dp"
             android:layout_marginBottom="56dp"
             android:background="@android:color/transparent"
-            android:contentDescription="@string/button_applist"
-            app:srcCompat="@drawable/menu" />
+            android:contentDescription="@string/button_search"
+            app:srcCompat="@drawable/search"/>
 
         <ImageView
             android:id="@+id/browserButton"
