--- a/TxTLauncher/app/src/main/res/layout/activity_widget.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_widget.xml
@@ -86,11 +86,14 @@
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
                 android:hint="@string/note_title"
-                android:lines="5"
-                android:maxLines="50"
-                android:minLines="5"
+                android:scrollbars="vertical"
+                android:overScrollMode="always"
+                android:isScrollContainer="true"
+                android:lines="20"
+                android:maxLines="100"
+                android:minLines="20"
                 android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/noteTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/widgetNoteTitle" />
 
             <View
                 android:id="@+id/widgetDivider"
