--- a/TxTLauncher/app/src/main/res/values/ic_launcher_background.xml
+++ b/TxTLauncher/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#CACACA</color>
+    <color name="ic_launcher_background">#A9A0A0</color>
 </resources>
