--- a/TxTLauncher/app/src/main/res/layout/activity_widget.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_widget.xml
@@ -49,7 +49,7 @@
         <LinearLayout
             android:id="@+id/widgetContLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
@@ -85,6 +85,7 @@
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
                 android:hint="@string/note_title"
+                android:autofillHints="@string/note_title"
                 android:scrollbars="vertical"
                 android:overScrollMode="always"
                 android:isScrollContainer="true"
@@ -113,8 +114,9 @@
                 android:id="@+id/widgetDividerCal"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="16dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintTop_toBottomOf="@+id/widgetCalendar" />
 
@@ -124,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="32dp"
-                android:layout_marginBottom="32dp"
+                android:layout_marginBottom="0dp"
                 android:gravity="center|center_horizontal"
                 android:onClick="openWidgetMap"
                 android:text="@string/widgat_map"
@@ -132,84 +134,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/widgetDividerCal" />
 
-            <View
-                android:id="@+id/widgetDividerMap"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@+id/widgetOpenMapr" />
-
-
-            <SearchView
-                android:id="@+id/widgetSearch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/widgetDividerMap" />
-
-            <WebView
-                android:id="@+id/widgetPrivateAI"
-                android:layout_width="match_parent"
-                android:layout_height="700dp"
-                android:layout_marginBottom="16dp"
-                android:background="@color/material_dynamic_neutral30"
-                android:backgroundTint="@color/material_dynamic_neutral30"
-                app:layout_constraintTop_toBottomOf="@+id/search" />
-
             <Button
                 android:id="@+id/startAI"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
                 android:gravity="center|center_horizontal"
                 android:onClick="startAI"
                 android:text="@string/start_ai"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/widgetPrivateAI" />
+                app:layout_constraintTop_toBottomOf="@+id/widgetOpenMap" />
 
-            <View
-                android:id="@+id/widgetDivider1"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@+id/startAI" />
-
-            <SearchView
-                android:id="@+id/widgetCitySearch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:inputType="text"
-                app:layout_constraintTop_toBottomOf="@+id/widgetDivider1" />
-
-            <WebView
-                android:id="@+id/widgetWeather"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="16dp"
-                android:background="@color/material_dynamic_neutral30"
-                android:backgroundTint="@color/material_dynamic_neutral30"
-                app:layout_constraintTop_toBottomOf="@+id/widgetCitySearch" />
-
-            <View
-                android:id="@+id/widgetDivider2"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@+id/widgetWeather" />
 
             <Button
                 android:id="@+id/widgetCloseView"
@@ -222,7 +160,7 @@
                 android:text="@string/button_close_widget"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/widgetDivider2" />
+                app:layout_constraintTop_toBottomOf="@+id/startAI" />
 
             <View
                 android:id="@+id/widgetDivider3"
