--- a/TxTLauncher_alt/app/src/main/res/layout/fragment_tools.xml
+++ b/TxTLauncher_alt/app/src/main/res/layout/fragment_tools.xml
@@ -24,7 +24,7 @@
         <LinearLayout
             android:id="@+id/widgetContLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
@@ -52,19 +52,23 @@
             <EditText
                 android:id="@+id/widgetTextNote"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="402dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@color/material_dynamic_neutral30"
                 android:backgroundTint="@color/material_dynamic_neutral30"
                 android:gravity="start|top"
-                android:inputType="textMultiLine"
                 android:hint="@string/note_title"
-                android:lines="5"
-                android:maxLines="50"
-                android:minLines="5"
+                android:autofillHints="@string/note_title"
+                android:inputType="textMultiLine"
+                android:lines="20"
+                android:maxLines="100"
+                android:minLines="20"
                 android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/noteTitle" />
+                android:scrollbarAlwaysDrawHorizontalTrack="true"
+                android:scrollbarAlwaysDrawVerticalTrack="true"
+                android:scrollbars="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/wigetNoteTitle" />
 
             <View
                 android:id="@+id/widgetDivider"
@@ -89,63 +93,41 @@
                 android:layout_marginBottom="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/widgetCalendar" />
 
-
-            <SearchView
-                android:id="@+id/widgetSearch"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/widgetOpenMap"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
+                android:gravity="center|center_horizontal"
+                android:text="@string/widgat_map"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/widgetDividerMap" />
 
-            <WebView
-                android:id="@+id/widgetPrivateAI"
-                android:layout_width="match_parent"
-                android:layout_height="700dp"
-                android:layout_marginBottom="16dp"
-                android:background="@color/material_dynamic_neutral30"
-                android:backgroundTint="@color/material_dynamic_neutral30"
-                app:layout_constraintTop_toBottomOf="@+id/search" />
-
-
-            <View
-                android:id="@+id/widgetDivider1"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@+id/widgerPAI" />
-
-            <SearchView
-                android:id="@+id/widgetCitySearch"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/startAI"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:inputType="text"
-                app:layout_constraintTop_toBottomOf="@+id/widgetDivider1" />
-
-            <WebView
-                android:id="@+id/widgetWeather"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="32dp"
-                android:layout_marginBottom="16dp"
-                android:background="@color/material_dynamic_neutral30"
-                android:backgroundTint="@color/material_dynamic_neutral30"
-                app:layout_constraintTop_toBottomOf="@+id/widgetCitySearch" />
+                android:layout_marginBottom="32dp"
+                android:gravity="center|center_horizontal"
+                android:text="@string/start_ai"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/widgetOpenMap" />
 
             <View
-                android:id="@+id/widgetDivider2"
+                android:id="@+id/widgetDividerX"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
                 android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@+id/widgetWeather" />
+                app:layout_constraintTop_toBottomOf="@+id/startAI" />
 
         </LinearLayout>
 
