--- a/TxTLauncher-2/app/src/main/res/layout/activity_main.xml
+++ b/TxTLauncher-2/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
 
                         <TextView
                             android:id="@+id/digitalClock"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingStart="20dp"
                             android:paddingEnd="2dp"
@@ -91,7 +91,7 @@
                             android:textSize="60sp" />
                         <TextView
                             android:id="@+id/digitalDate"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingStart="20dp"
                             android:paddingEnd="2dp"
