--- a/TxTLauncher-2/app/src/main/res/values/colors.xml
+++ b/TxTLauncher-2/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="txt_gray">#B0A9A7</color>
     <color name="txt_darkgray">#4F4F4F</color>
     <color name="txt_black">#000000</color>
+    <color name="txt_darkgray2">#6E6E6E</color>
 </resources>
